# clawchat

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  Makefile  README.md  capacitor.config.ts  docker-compose.ollama.yml  docker-compose.yml  electron-builder.yml  index.html  nginx.conf  orval.config.ts  package-lock.json  package.json  purpose.md  tsconfig.app.json  tsconfig.electron.json  vite.config.ts
.github/workflows/: build-android.yml  build-electron.yml  ci.yml  publish-docker.yml
android/: capacitor.settings.gradle  gradlew  settings.gradle.kts
android-native/core/: build.gradle.kts
android-native/gradle/: libs.versions.toml
android-native/widget/: build.gradle.kts
android/app/: build.gradle  build.gradle.kts  capacitor.build.gradle  proguard-rules.pro
android/core/: build.gradle.kts
app/: App.js  app.json  package-lock.json  package.json
claw-cli/: pyproject.toml
claw-cli/src/claw_cli/: __init__.py  __main__.py  cli.py  client.py  config.py  errors.py  output.py
claw-cli/tests/: test_cli_parsing.py  test_client.py  test_config.py  test_integration.py  test_output.py
docs/: README.md  api-design.md  architecture.md  backend-guide.md  database-schema.md  deployment.md  frontend-guide.md  obsidian-cli-contract.md  remote-access-runbook.md  roadmap.md  upgrade-reference.md
electron/: main.ts  preload.ts  server-manager.ts
server/: .env.example  Dockerfile  alembic.ini  config.py  database.py  main.py  requirements.txt  run_server.py
src/: App.tsx  main.tsx  router.tsx
tools/: bump-android-version.js
(+485 files in other folders)
