[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "claw-cli"
version = "0.1.0"
description = "CLI client for ClawChat — task management and agent operations"
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.27,<1",
    "pydantic>=2.0,<3",
    "platformdirs>=4.0,<5",
    "rich>=13.0,<14",
]

[project.scripts]
claw = "claw_cli.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/claw_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
